--- a/main.html
+++ b/main.html
@@ -126,8 +126,10 @@
                 당신을 소개해주세요.
             </p>
             <form action="#">
-                <input type="text" placeholder="Your Name" class="hire_name">
-                <input type="text" placeholder="Your Email" class="hire_Email">
+                <div>
+                    <input type="text" placeholder="Your Name" class="hire_name">
+                    <input type="text" placeholder="Your Email" class="hire_Email">
+                </div>
                 <input type="text" placeholder="Your Title" class="hire_title">
                 <input type="text" placeholder="Your Comment" class="hire_comment">
                 <button type="submit">SEND MESSAGE</button>
