header 부분 nav 추가
header 부분 nav 추가

--- a/main.html
+++ b/main.html
@@ -13,20 +13,169 @@
 <body>
     <!-- Header -->
     <header>
-        <a class="logo">
+        <a class="logo" href="#">
             <img src="./img/logo/logo.png" alt="아모레퍼시픽 로고">
         </a>
 
         <nav>
             <ul>
-                <li><a href="">ABOUT</a></li>
-                <li><a href="">BRANDS</a></li>
-                <li><a href="">OUR CULTURE</a></li>
-                <li><a href="">COMMITMENTS</a></li>
-                <li><a href="">INVESTORS</a></li>
-                <li><a href="">NEWS</a></li>
+                <li>
+                    <a href="#">ABOUT</a>
+                    <div class="about_wrap">
+                        <div>
+                            <h3>ABOUT US</h3>
+                            <p>
+                                아모레퍼시픽은 아름다움으로 세상을 변화시키는 ‘원대한 기업(Great Beauty Company)’으로의 도약을 준비합니다. ‘원대한(Great)’ 성장을 위해 모든 측면에서의 최고를 지향함은 물론, 환경에 대한 영향을 최소화 하고 사람 중심의 경영을 통해 사회적인 책임을 다하는 기업이 되기 위해 최선을 다하겠습니다.
+                            </p>
+                        </div>
+                        <ul> 
+                            <ul>
+                                <li><a href="#"><strong>Amorepacific</strong></a></li>
+                                <li><a href="#">Our Story</a></li>
+                                <li><a href="#">Our History</a></li>
+                                <li><a href="#">Philosophy</a></li>
+                                <li><a href="#">헤리티지 원료</a></li>
+                                <li><a href="#">소명과 원칙</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="#"><strong>Research & Innovation</strong></a></li>
+                                <li><a href="#">연구개발</a></li>
+                                <li><a href="#">생산물류(SCM)</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="#"><strong>비주얼 아이덴티티</strong></a></li>
+                                <li><a href="#">CI</a></li>
+                                <li><a href="#">아리따 글꼴</a></li>
+                            </ul>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">BRANDS</a>
+                    <div class="brands_wrap">
+                        <div>
+                            <h3>BRANDS</h3>
+                            <p>
+                                아모레퍼시픽의 브랜드는 고객의 한결같은 성원과 기대에 부응하기 위해 끊임없이 미의 영역을 개척해 왔고, 이제 국내를 넘어 전 세계에 아시아의 아름다움을 대표하는 상징으로 자리매김하고 있습니다.
+                            </p>
+                        </div>
+                        <ul> 
+                            <ul>
+                                <li><a href="#"><strong>Amorepacific</strong></a></li>
+                                <li><a href="#">Our Story</a></li>
+                                <li><a href="#">Our History</a></li>
+                                <li><a href="#">Philosophy</a></li>
+                                <li><a href="#">헤리티지 원료</a></li>
+                                <li><a href="#">소명과 원칙</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="#"><strong>Research & Innovation</strong></a></li>
+                                <li><a href="#">연구개발</a></li>
+                                <li><a href="#">생산물류(SCM)</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="#"><strong>비주얼 아이덴티티</strong></a></li>
+                                <li><a href="#">CI</a></li>
+                                <li><a href="#">아리따 글꼴</a></li>
+                            </ul>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">OUR CULTURE</a>
+                    <div class="culture_wrap">
+                        <div>
+                            <h3>OUR CULTURE</h3>
+                            <p>
+                                아모레퍼시픽의 지난 70여년은 아름다움으로 세상을 변화시키겠다는 원대한 소망과 함께한 미(美)의 여정이었습니다. 자연과 인간에 대한 아시아의 깊은 지혜를 바탕으로 아름다움이 지닌 무한한 가능성을 실현하고 삶의 풍요로운 가치를 더하는 뷰티 크리에이터가 되겠습니다.
+                            </p>
+                        </div>
+                        <ul> 
+                            <ul>
+                                <li><a href="#"><strong>건축</strong></a></li>
+                                <li><a href="#">본사</a></li>
+                                <li><a href="#">아모레 뷰티 파크</a></li>
+                                <li><a href="#">미지움</a></li>
+                                <li><a href="#">제주 오설록</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="#"><strong>공간</strong></a></li>
+                                <li><a href="#">본사</a></li>
+                                <li><a href="#">플래그십 스토어</a></li>
+                                <li><a href="#">오산 아모레 뷰티 파크</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="#"><strong>문화경영</strong></a></li>
+                                <li><a href="#">메세나 활동</a></li>
+                                <li><a href="#">출간 도서</a></li>
+                            </ul>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">COMMITMENTS</a>
+                    <div class="commitments_wrap">
+                        <div>
+                            <h3>COMMITMENTS</h3>
+                            <p>
+                                아모레퍼시픽은 자연과 사람, 기업이 조화롭게 공존하는 아름다운 세상을 만들고자 합니다. 지속적인 성장의 튼튼한 기초를 쌓아 놓고자, 지속가능경영 체계를 정립하고 다양한 활동을 추진하고 있습니다. 여성, 자연생태, 문화 영역의 사회공헌 활동도 끊임없이 펼치고 있습니다. 또한 고객의 안전을 최우선 가치로 여기며 고객이 안심할 수 있는 품질을 위해 항상 노력하고 있습니다.
+                            </p>
+                        </div>
+                        <ul> 
+                            <ul>
+                                <li><a href="#"><strong>지속가능경영</strong></a></li>
+                                <li><a href="#">지속가능한 생활 촉진</a></li>
+                                <li><a href="#">함께하는 성장 구현</a></li>
+                                <li><a href="#">순환 경제 기여</a></li>
+                                <li><a href="#">지속가능성 보고서</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="#"><strong>CSR</strong></a></li>
+                                <li><a href="#">여성</a></li>
+                                <li><a href="#">자연생태</a></li>
+                                <li><a href="#">문화</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="#"><strong>고객안심품질</strong></a></li>
+                                <li><a href="#">고객 중심의 품질 기준</a></li>
+                                <li><a href="#">고객 중심의 품질 프로세스</a></li>
+                            </ul>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <a href="#">INVESTORS</a>
+                    <div class="investors_wrap">
+                        <div>
+                            <h3>INVESTORS</h3>
+                            <p>
+                                아모레퍼시픽은 미와 건강 분야에 핵심 역량을 집중하고 투명한 지배구조를 만들기 위해, 지주회사 중심의 기업 지배구조와 사업별 책임 경영체제를 구축하여 운영하고 있습니다. 이를 통해 화장품·생활용품·건강제품 등 미와 건강 사업의 전문화를 실현하고 핵심 역량을 지속적으로 강화하고 있습니다.
+                            </p>
+                        </div>
+                        <ul> 
+                            <ul>
+                                <li><a href="#"><strong>아모레퍼시픽</strong></a></li>
+                                <li><a href="#">IR 자료</a></li>
+                                <li><a href="#">재무정보</a></li>
+                                <li><a href="#">공시정보</a></li>
+                                <li><a href="#">주식정보</a></li>
+                                <li><a href="#">기업지배구조</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="#"><strong>아모레퍼시픽 그룹</strong></a></li>
+                                <li><a href="#">IR 자료</a></li>
+                                <li><a href="#">재무정보</a></li>
+                                <li><a href="#">공시정보</a></li>
+                                <li><a href="#">주식정보</a></li>
+                                <li><a href="#">기업지배구조</a></li>
+                            </ul>
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="#">NEWS</a></li>
             </ul>
         </nav>
+        
     </header>
 
     <!-- Main_Intro -->
