--- a/main.html
+++ b/main.html
@@ -248,28 +248,28 @@
             <li>
                 <h2>Philosophy</h2>
                 <p>
-                    " 아모레퍼시픽은 아시안 뷰티(Asian Beauty)의 가치를 대표하는 기업으로, <br />
+                    " 아모레퍼시픽은 아시안 뷰티(Asian Beauty)의 가치를 대표하는 기업으로,
                      아름답고 건강하게 살고자 하는 인류의 영원한 꿈을 실현하고자 합니다. "
                 </p>
             </li>
             <li>
                 <h2>AMOREPACIFIC</h2>
                 <p>
-                    "우리만이 창조할 수 있는 아름다움으로 새로운 미(美)의 역사를 써 내려가며, <br />
-                    더 아름다운 세상을 향한 원대한 여정을 이어가고 있습니다."
+                    "우리만이 창조할 수 있는 아름다움으로 새로운 미(美)의 역사를 써 내려가며,
+                    더 아름다운 세상을 향한 원대한 여정을 이어갑니다."
                 </p>
             </li>
             <li class="active_ment">
                 <h2>Heritage Ingredients</h2>
                 <p>
-                    "자연의 참된 이치를 품은 아시아의 원료 식물은 아모레퍼시픽이 <br />
+                    "자연의 참된 이치를 품은 아시아의 원료 식물은 아모레퍼시픽이
                     추구하는 아시안 뷰티(Asian Beauty)의 출발점입니다."
                 </p>
             </li>
             <li>
                 <h2>Mission & Principles</h2>
                 <p>
-                    "아모레퍼시픽그룹은 ‘아름다움과 건강으로 인류에 공헌하겠다’는 창업 정신을 품고, <br />
+                    "아모레퍼시픽그룹은 ‘아름다움과 건강으로 인류에 공헌하겠다’는 창업 정신을 품고,
                     ‘사람을 아름답게, 세상을 아름답게’하는 미의 여정을 한걸음 한걸음 내딛고 있습니다."
                 </p>
             </li>
