work 부분 마우스 호버이벤트 추가
work 부분 마우스 호버이벤트 추가

--- a/main.html
+++ b/main.html
@@ -302,22 +302,22 @@
         <div class="work_wrap">
             <ul>
                 <li>
-                    <a href="https://www.apgroup.com/int/ko/our-culture/amorepacific-architecture/amorepacific-headquarters/amorepacific-headquarters.html"><img src="./img/architecture/architecture_slide01.jpg" alt="작업 이미지"></a>
+                    <a href="https://www.apgroup.com/int/ko/our-culture/amorepacific-architecture/amorepacific-headquarters/amorepacific-headquarters.html"><img src="./img/architecture/architecture_slide01.jpg" alt="작업 이미지"><span>자세히 보기</span></a>
                     <h2>본사</h2>
                     <p>아모레퍼시픽 본사는 협업과 소통에 의해 창조되는 혁신을 기반으로, 세계의 무대로 나아가고자 하는 아모레퍼시픽의 큰 꿈을 담은 미의 전당입니다.</p>
                 </li>
                 <li>
-                    <a href="https://www.apgroup.com/int/ko/our-culture/amorepacific-architecture/amore-beauty-park/amore-beauty-park.html"><img src="./img/architecture/architecture_slide02.jpg" alt="작업 이미지"></a>
+                    <a href="https://www.apgroup.com/int/ko/our-culture/amorepacific-architecture/amore-beauty-park/amore-beauty-park.html"><img src="./img/architecture/architecture_slide02.jpg" alt="작업 이미지"><span>자세히 보기</span></a>
                     <h2>아모레 뷰티 파크</h2>
                     <p>아모레 뷰티 파크는 서로 연결된 복합적이고 다중적인 주체가 만나는 협업의 공간이며 구매 프로세스를 통제하는 관리센터입니다.</p>
                 </li>
                 <li>
-                    <a href="https://www.apgroup.com/int/ko/our-culture/amorepacific-architecture/mizium/mizium.html"><img src="./img/architecture/architecture_slide03.jpg" alt="작업 이미지"></a>
+                    <a href="https://www.apgroup.com/int/ko/our-culture/amorepacific-architecture/mizium/mizium.html"><img src="./img/architecture/architecture_slide03.jpg" alt="작업 이미지"><span>자세히 보기</span></a>
                     <h2>미지움</h2>
                     <p>전문적인 기술과 창의적인 감성이 연결과 소통으로 확장되는 공간으로 아모레퍼시픽의 혁신적인 연구가 협업을 통해 창의적으로 생산되는 곳입니다.</p>
                 </li>
                 <li>
-                    <a href="https://www.apgroup.com/int/ko/our-culture/amorepacific-architecture/jeju-osulloc/jeju-osulloc.html"><img src="./img/architecture/architecture_slide04.jpg" alt="작업 이미지"></a>
+                    <a href="https://www.apgroup.com/int/ko/our-culture/amorepacific-architecture/jeju-osulloc/jeju-osulloc.html"><img src="./img/architecture/architecture_slide04.jpg" alt="작업 이미지"><span>자세히 보기</span></a>
                     <h2>제주 오설록</h2>
                     <p>제주의 차 밭과 천혜의 원시림에 둘러싸여 보이는 것과 보이지 않는 것, 빛과 어둠, 투명함과 불투명함이 자연과 문화의 경계에서 어우러지는 밀도와 영역의 열린 공간입니다.</p>
                 </li>
