logo 및 각 섹션 반응형 제작
logo 및 각 섹션 반응형 제작

--- a/main.html
+++ b/main.html
@@ -290,9 +290,7 @@
     <section class="main_about scrollAni">
         <h2>About Us</h2>
         <p>
-            아모레퍼시픽은 아름다움으로 세상을 변화시키는 ‘원대한 기업(Great Beauty Company)’으로의 도약을 준비합니다. <br />
-            ‘원대한(Great)’ 성장을 위해 모든 측면에서의 최고를 지향함은 물론, 환경에 대한 영향을 최소화 하고 <br />
-            사람 중심의 경영을 통해 사회적인 책임을 다하는 기업이 되기 위해 최선을 다하겠습니다. <br />
+            아모레퍼시픽은 아름다움으로 세상을 변화시키는 ‘원대한 기업(Great Beauty Company)’으로의 도약을 준비합니다.‘원대한(Great)’ 성장을 위해 모든 측면에서의 최고를 지향함은 물론, 환경에 대한 영향을 최소화 하고 사람 중심의 경영을 통해 사회적인 책임을 다하는 기업이 되기 위해 최선을 다하겠습니다.
         </p>
         <img src="./img/logo/logo_flower.png" alt="꽃모양 아모레퍼시픽 로고">
     </section>
@@ -329,9 +327,7 @@
     <section class="main_vid scrollAni">
         <h2>AbsoluTea & TIME RESPONSE</h2>
         <p>
-            17년의 연구와 228,000번의 실험 끝에 탄생한 피부 과학의 결정체 앱솔루티 ™가 <br />
-            피부의 시작부터 끝까지 빈틈없이 케어하여 마침내, 타고난 피부의 한계를 넘어서는 <br />
-            입체 리뉴얼 안티에이징을 선사합니다.
+            17년의 연구와 228,000번의 실험 끝에 탄생한 피부 과학의 결정체 앱솔루티 ™가 피부의 시작부터 끝까지 빈틈없이 케어하여 마침내, 타고난 피부의 한계를 넘어서는 입체 리뉴얼 안티에이징을 선사합니다.
         </p>
         <iframe src="https://www.youtube.com/embed/zfxTEETvok8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
