--- a/main.html
+++ b/main.html
@@ -267,10 +267,295 @@
                 <span class="bar_2"></span>
             </div>
             
+            <div class="side_nav_list_wrap">
+                <ul class="side_nav_list">
+                    <li>
+                        <a href="#">ABOUT US</a>
+                        <div class="side_nav_one">
+                            <h3><a href="#">HOME</a></h3>
+                            <ul>
+                                <li>
+                                    <a href="#">Amorepacific</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">ABOUT US</a></h4>
+                                        <ul>
+                                            <li><a href="#">Our Story</a></li>
+                                            <li><a href="#">Our History</a></li>
+                                            <li><a href="#">Philosophy</a></li>
+                                            <li><a href="#">헤리티지 원료</a></li>
+                                            <li><a href="#">소명과 원칙</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">Research & Innovation</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">ABOUT US</a></h4>
+                                        <ul>
+                                            <li><a href="#">연구개발</a></li>
+                                            <li><a href="#">생산물류(SCM)</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">비주얼 아이덴티티</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">ABOUT US</a></h4>
+                                        <ul>
+                                            <li><a href="#">연구개발</a></li>
+                                            <li><a href="#">생산물류(SCM)</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">BRANDS</a>
+                        <div class="side_nav_one">
+                            <h3><a href="#">HOME</a></h3>
+                            <ul>
+                                <li>
+                                    <a href="#">화장품</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">BRANDS</a></h4>
+                                        <ul class="scroll_nav_brands">
+                                            <li><a href="#">아모레퍼시픽</a></li>
+                                            <li><a href="#">설화수</a></li>
+                                            <li><a href="#">라네즈</a></li>
+                                            <li><a href="#">마몽드</a></li>
+                                            <li><a href="#">이니스프리</a></li>
+                                            <li><a href="#">에뛰드</a></li>
+                                            <li><a href="#">시예누</a></li>
+                                            <li><a href="#">헤라</a></li>
+                                            <li><a href="#">홀리추얼</a></li>
+                                            <li><a href="#">프리메라</a></li>
+                                            <li><a href="#">아이오페</a></li>
+                                            <li><a href="#">한율</a></li>
+                                            <li><a href="#">리리코스</a></li>
+                                            <li><a href="#">아웃런</a></li>
+                                            <li><a href="#">이지피지</a></li>
+                                            <li><a href="#">에스쁘아</a></li>
+                                            <li><a href="#">레어카인드</a></li>
+                                            <li><a href="#">스테디</a></li>
+                                            <li><a href="#">순플러스</a></li>
+                                            <li><a href="#">오딧세이</a></li>
+                                            <li><a href="#">미래파</a></li>
+                                            <li><a href="#">브로앤팁스</a></li>
+                                            <li><a href="#">비레디</a></li>
+                                            <li><a href="#">이너프 프로젝트</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">향수</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">BRANDS</a></h4>
+                                        <ul>
+                                            <li><a href="#">구딸 파리</a></li>
+                                            <li><a href="#">프라도어</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">메디컬뷰티</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">BRANDS</a></h4>
+                                        <ul>
+                                            <li><a href="#">에스트라</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">뷰티 디바이스</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">BRANDS</a></h4>
+                                        <ul>
+                                            <li><a href="#">메이크온</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">이너뷰티</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">BRANDS</a></h4>
+                                        <ul>
+                                            <li><a href="#">바이탈뷰티</a></li>
+                                            <li><a href="#">큐브미</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">헤어케어</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">BRANDS</a></h4>
+                                        <ul>
+                                            <li><a href="#">려</a></li>
+                                            <li><a href="#">미쟝센</a></li>
+                                            <li><a href="#">프레시팝</a></li>
+                                            <li><a href="#">라보에이치</a></li>
+                                            <li><a href="#">아윤채</a></li>
+                                            <li><a href="#">아모스 프로페셔널</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">바디케어</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">BRANDS</a></h4>
+                                        <ul>
+                                            <li><a href="#">해피바스</a></li>
+                                            <li><a href="#">일리윤</a></li>
+                                            <li><a href="#">필보이드</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">덴탈케어</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">BRANDS</a></h4>
+                                        <ul>
+                                            <li><a href="#">메디안</a></li>
+                                            <li><a href="#">동의본초연구</a></li>
+                                            <li><a href="#">플레시아</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">티컬처</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">BRANDS</a></h4>
+                                        <ul>
+                                            <li><a href="#">오설록</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">OUR CULTURE</a>
+                        <div class="side_nav_one">
+                            <h3><a href="#">HOME</a></h3>
+                            <ul>
+                                <li>
+                                    <a href="#">건축</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">OUR CULTURE</a></h4>
+                                        <ul>
+                                            <li><a href="#">본사</a></li>
+                                            <li><a href="#">아모레 뷰티 파크</a></li>
+                                            <li><a href="#">미지움</a></li>
+                                            <li><a href="#">제주 오설록</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">공간</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">OUR CULTURE</a></h4>
+                                        <ul>
+                                            <li><a href="#">본사</a></li>
+                                            <li><a href="#">플래그십 스토어</a></li>
+                                            <li><a href="#">오산 아모레 뷰티 파크</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">문화경영</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">OUR CULTURE</a></h4>
+                                        <ul>
+                                            <li><a href="#">메세나 활동</a></li>
+                                            <li><a href="#">출간 도서</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">COMMITMENTS</a>
+                        <div class="side_nav_one">
+                            <h3><a href="#">HOME</a></h3>
+                            <ul>
+                                <li>
+                                    <a href="#">지속가능경영</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">COMMITMENTS</a></h4>
+                                        <ul>
+                                            <li><a href="#">지속가능한 생활 촉진</a></li>
+                                            <li><a href="#">함께하는 성장 구현</a></li>
+                                            <li><a href="#">순환 경제 기여</a></li>
+                                            <li><a href="#">지속가능성 보고서</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">CSR</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">COMMITMENTS</a></h4>
+                                        <ul>
+                                            <li><a href="#">여성</a></li>
+                                            <li><a href="#">자연생태</a></li>
+                                            <li><a href="#">문화</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">고객안심품질</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">COMMITMENTS</a></h4>
+                                        <ul>
+                                            <li><a href="#">고객 중심의 품질 기준</a></li>
+                                            <li><a href="#">고객 중심의 품질 프로세스</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="#">INVESTORS</a>
+                        <div class="side_nav_one">
+                            <h3><a href="#">HOME</a></h3>
+                            <ul>
+                                <li>
+                                    <a href="#">아모레퍼시픽</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">INVESTORS</a></h4>
+                                        <ul>
+                                            <li><a href="#">IR 자료</a></li>
+                                            <li><a href="#">재무정보</a></li>
+                                            <li><a href="#">공시정보</a></li>
+                                            <li><a href="#">주식정보</a></li>
+                                            <li><a href="#">기업지배구조</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a href="#">아모레퍼시픽 그룹</a>
+                                    <div class="side_nav_two">
+                                        <h4><a href="#">INVESTORS</a></h4>
+                                        <ul>
+                                            <li><a href="#">IR 자료</a></li>
+                                            <li><a href="#">재무정보</a></li>
+                                            <li><a href="#">공시정보</a></li>
+                                            <li><a href="#">주식정보</a></li>
+                                            <li><a href="#">기업지배구조</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li><a href="https://www.apgroup.com/int/ko/news/news.html">NEWS</a></li>
+                </ul>
+            </div>
         </nav>
-
-        
     </header>
+
+    <div class="dark_filter"></div>
 
     <!-- Main_Intro -->
     <section class="main_intro">
@@ -400,7 +685,7 @@
                 </div>
                 <input type="text" placeholder="Your Title" class="hire_title">
                 <textarea type="text" placeholder="Your Comment" class="hire_comment"></textarea>
-                <button type="button" onclick=clickBtn_hire()>SEND MESSAGE</button>
+                <button type="button" onclick=input_alert()>SEND MESSAGE</button>
             </form>
         </div>
     </section>
