slide_nav 마이크로 인터랙션 추가
slide_nav 마이크로 인터랙션 추가

--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
         <nav class="slide_nav">
             <ul>
                 <li>
-                    <a href="https://www.apgroup.com/int/ko/about-us/about-us.html">ABOUT</a>
+                    <a href="https://www.apgroup.com/int/ko/about-us/about-us.html" class="slide_nav_title">ABOUT</a>
                     <div class="about_wrap">
                         <div class="nav_title">
                             <h3>ABOUT US</h3>
@@ -54,7 +54,7 @@
                 </li>
 
                 <li>
-                    <a href="https://www.apgroup.com/int/ko/brands/brands.html">BRANDS</a>
+                    <a href="https://www.apgroup.com/int/ko/brands/brands.html"  class="slide_nav_title">BRANDS</a>
                     <div class="brands_wrap">
                         <div class="nav_title">
                             <h3>BRANDS</h3>
@@ -166,7 +166,7 @@
                 </li>
 
                 <li>
-                    <a href="https://www.apgroup.com/int/ko/our-culture/our-culture.html">OUR CULTURE</a>
+                    <a href="https://www.apgroup.com/int/ko/our-culture/our-culture.html"  class="slide_nav_title">OUR CULTURE</a>
                     <div class="culture_wrap">
                         <div class="nav_title">
                             <h3>OUR CULTURE</h3>
@@ -198,7 +198,7 @@
                 </li>
 
                 <li>
-                    <a href="https://www.apgroup.com/int/ko/commitments/commitments.html">COMMITMENTS</a>
+                    <a href="https://www.apgroup.com/int/ko/commitments/commitments.html"  class="slide_nav_title">COMMITMENTS</a>
                     <div class="commitments_wrap">
                         <div class="nav_title">
                             <h3>COMMITMENTS</h3>
@@ -230,7 +230,7 @@
                 </li>
 
                 <li>
-                    <a href="https://www.apgroup.com/int/ko/investors/investors.html">INVESTORS</a>
+                    <a href="https://www.apgroup.com/int/ko/investors/investors.html"  class="slide_nav_title">INVESTORS</a>
                     <div class="investors_wrap">
                         <div class="nav_title">
                             <h3>INVESTORS</h3>
@@ -259,8 +259,9 @@
                     </div>
                 </li>
 
-                <li><a href="https://www.apgroup.com/int/ko/news/news.html">NEWS</a></li>
+                <li><a href="https://www.apgroup.com/int/ko/news/news.html"  class="slide_nav_title">NEWS</a></li>
             </ul>
+            <span class="select_bar"></span>
         </nav>
         
         <nav class="side_nav">
