intro 부분 버튼 수정, side_nav부분 ment_btn부분 버그 수정
1. intro 섹션에서 button 태그를 a태그로 수정
2. side_nav의 a 버튼 클릭시 위로 올라가는 부분 수정
3. ment_btn 클릭시 버튼들의 위치가 삭짝 변경되는 부분 수정

--- a/main.html
+++ b/main.html
@@ -569,7 +569,7 @@
                     아름다움의 문화를 창조하는 기업, 아모레퍼시픽은 <br />
                     오늘도 새로운 '미(美)'의 역사를 써 내려가고 있습니다.
                 </p>
-                <button>CONTACT US</button>
+                <a href="https://www.apgroup.com/int/ko/">CONTACT US</a>
             </div>
         </div>
     </section>
