--- a/main.html
+++ b/main.html
@@ -566,12 +566,37 @@
             <div class="intro_content">
                 <h1 class="intro_title">Connectivity and Creativity</h1>
                 <p class="intro_sub">
+                    소통과 창의의 공간, 아모레퍼시픽 본사는 온 세계로 나아가려는 <br />
+                    새로운 백 년의 꿈을 담은 아름다움의 전당입니다.
+                </p>
+                <a href="https://www.apgroup.com/int/ko/">CONTACT US</a>
+            </div>
+        </div>
+
+        <div class="intro_wrap content_invisible">
+            <div class="intro_content">
+                <h1 class="intro_title">Creating a Culture of Beauty</h1>
+                <p class="intro_sub">
                     아름다움의 문화를 창조하는 기업, 아모레퍼시픽은 <br />
                     오늘도 새로운 '미(美)'의 역사를 써 내려가고 있습니다.
                 </p>
                 <a href="https://www.apgroup.com/int/ko/">CONTACT US</a>
             </div>
         </div>
+
+        <div class="intro_wrap content_invisible">
+            <div class="intro_content">
+                <h1 class="intro_title">Creating a Culture of Beauty</h1>
+                <p class="intro_sub">
+                    아름다움의 문화를 창조하는 기업, 아모레퍼시픽은 <br />
+                    오늘도 새로운 '미(美)'의 역사를 써 내려가고 있습니다.
+                </p>
+                <a href="https://www.apgroup.com/int/ko/">CONTACT US</a>
+            </div>
+        </div>
+
+        <button type="button" class="btn_R">&#xf105</button>
+        <button type="button" class="btn_L btn_invisivle">&#xf104</button>
     </section>
 
     <!-- Main_About -->
