intro, brands 부분 자동 슬라이드 애니메이션 적용
intro, brands 부분 자동 슬라이드 애니메이션 적용

--- a/main.html
+++ b/main.html
@@ -586,17 +586,18 @@
 
         <div class="intro_wrap content_invisible">
             <div class="intro_content">
-                <h1 class="intro_title">Creating a Culture of Beauty</h1>
+                <h1 class="intro_title">Heritage Ingredients</h1>
                 <p class="intro_sub">
-                    아름다움의 문화를 창조하는 기업, 아모레퍼시픽은 <br />
-                    오늘도 새로운 '미(美)'의 역사를 써 내려가고 있습니다.
+                    자연의 참된 이치를 품은 아시아의 원료 식물은 <br />
+                    아모레퍼시픽이 추구하는 아시안 뷰티(Asian Beauty)의 출발점입니다.
                 </p>
                 <a href="https://www.apgroup.com/int/ko/">CONTACT US</a>
             </div>
         </div>
 
         <button type="button" class="btn_R">&#xf105</button>
-        <button type="button" class="btn_L btn_invisivle">&#xf104</button>
+        <button type="button" class="btn_L ">&#xf104</button>
+        <span class="bg_loading_bar changeAni"></span>
     </section>
 
     <!-- Main_About -->
@@ -690,6 +691,11 @@
     <!-- Main_Brand -->
     <section class="main_brand">
         <ul>
+            <li><img src="./img/logo/amorepacific.png" alt="아모레퍼시픽 로고"></li>
+            <li><img src="./img/logo/etude.png" alt="에뛰드 로고"></li>
+            <li><img src="./img/logo/innisfree.png" alt="이니스프리 로고"></li>
+            <li><img src="./img/logo/laneige.png" alt="라네즈 로고"></li>
+            <li><img src="./img/logo/sulwhasoo.png" alt="설화수 로고"></li>
             <li><img src="./img/logo/amorepacific.png" alt="아모레퍼시픽 로고"></li>
             <li><img src="./img/logo/etude.png" alt="에뛰드 로고"></li>
             <li><img src="./img/logo/innisfree.png" alt="이니스프리 로고"></li>
